# Arcade

./: CMakeLists.txt  README.md
core/: CMakeLists.txt  core.cpp  exception.cpp  main.cpp  utils.cpp
game_libs/snake/: CMakeLists.txt
game_libs/snake/include/: player.hpp  snakeGame.hpp
game_libs/snake/src/: player.cpp  snakeGame.cpp
graphic_libs/ncurses/: CMakeLists.txt  libncurses.cpp  libncurses.h
graphic_libs/sdl/: CMakeLists.txt  sdl.cpp  sdl.h
graphic_libs/sfml/: CMakeLists.txt  sfml.cpp  sfml.h
include/: IGame.hpp  core.h  exception.hpp  iDisplayModule.hpp  inputs.h  utils.hpp
